# asi-umbrella-pipeline

./: .gitignore  README.md  deployment.sh  pyproject.toml  query_data.sh  things_to_do.md  to_parque.py  worklog.md
api-service/: Program.cs  api-service.csproj  api-service.http
api-service/Properties/: launchSettings.json
api-service/controllers/: dynamicVesselController.cs
asi-db/: docker-compose.yaml  schema.sql
data_analytics/: README.md  main.py  summary.txt
data_analytics/data/: description.txt
docs/: ETL-architecture-v1.drawio  README_parameters.txt  README_parameters_meta.txt
kafka_build/: docker-compose.yaml  prometheus.yml
pipeline/: .dockerignore  Dockerfile  configuration.yaml  configuration_compose.yaml  docker-compose.yaml  lint.sh  pyproject.toml
pipeline/data/: add_files_here.txt  dynamic_aton.parquet  dynamic_sar.parquet
pipeline/metadata/: aton.csv  ship_types_detailed.csv
pipeline/src/metadata/: navigational_status.csv
pipeline/src/pipeline/: __main__.py  configuration.py
pipeline/src/pipeline/dependencies/base_app/: base_app.py
pipeline/src/pipeline/dependencies/data_process/: static_functions.py
pipeline/src/pipeline/dependencies/decoder/: message_decoder.py  message_map.py
pipeline/src/pipeline/dependencies/driver/: db_config.py  db_driver.py  query_builder.py  table_info.py
pipeline/src/pipeline/dependencies/models/: meta_models.py  wire_models.py
pipeline/tests/integration/: query_test.py
query_results/: query_result_1.txt  query_result_4.txt
