[tool.poetry]
name = "umbrella"
version = "0.0.0"
description = "umbrella project for the pipeline. Not runnable"
authors = ["Wille Siren"]
readme = "README.md"
include = ["pipeline/py.typed"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
# Core dependencies
pydantic = "^2.5"
pandas = "^2.2"
pyarrow = "*"
