[tool.poetry]
name = "pipeline"
version = "0.0.0"
description = "ETL pipeline for streaming ASI data"
authors = ["Wille Siren"]
packages = [{include = "pipeline", from = "src"}]
include = ["pipeline/py.typed"]

[tool.poetry.scripts]
pipeline = "pipeline.__main__:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
# Core dependencies
pydantic = "^2.5"
pandas = "^2.2"
orjson = "^3.9"
pyyaml = "^6.0"
pyarrow = "*"


# Kafka driver -
confluent_kafka = "^2.3"

# FastAPI and Uvicorn
fastapi = "^0.110"
uvicorn = "^0.27"

# psycopg3
psycopg = {extras = ["binary"], version = "^3.1.12"}
psycopg_pool = "^3.2.6"

[tool.poetry.group.dev.dependencies]
mypy = "*"
black = "*"
isort = "*"
flake8 = "*"
pip-audit = "*"

[tool.flake8]
ignore = ["E501"]

[tool.mypy]
# Add src to module resolution path
mypy_path = "src"
# Ignore missing stubs for 3rd-party libs like confluent_kafka, pandas, yaml
ignore_missing_imports = true
